syntax = "proto3";

package dashboards;

import "github.com/appcelerator/amp/data/accounts/accounts.proto";

message Dashboard {
  string id = 1;
  string name = 2;
  accounts.Account owner = 3;
  int64 create_dt = 4;
  string data = 5;
}
